Refactor cache-related tests to improve structure and readability. Replace `@MockBean` with `@MockitoBean` for better integration with Mockito. Update string concatenation to use text blocks for clarity.